fix 1 SA test (one to go)
Signed-off-by: Caio Luke <caioluke97@gmail.com>